--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li><a href="2.html">CSS</a></li>
       <li><a href="3.html">JavaScript</a></li>
     </ol>
-    <h2>WEB</h2>
+    <h2>WEB2</h2>
     <p style="margin-top: 45px">
       This page gives some rough guidelines which most Wikipedia editors use to
       decide if a form of web-specific content, being either the content of a
