--- a/1.html
+++ b/1.html
@@ -3,40 +3,41 @@
   <head>
     <title>WEB1 - HTML</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <h1><a href="index.html">WEB</a></h1>
-    <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
-    </ol>
-    <ul>
-      <li>egoing</li>
-      <li>k8805</li>
-      <li>youbin</li>
-    </ul>
-    <h2>HTML이란 무엇인가?</h2>
-    h1> <strong>(Hypertext Markup Language)</strong>은 <u>web</u>> 페이지와
-    <p>그 내용을 구조화하기 위해 <br />사용하는 코드</p>
-    <p style="margin-top: 45px">
-      <a
-        href="https://www.w3.org/TR/2011/WD-html5-20110405/"
-        target="_blank"
-        title="html5 specification"
-      >
-        하이퍼 텍스트 마크업 언어(영어: Hyper Text Markup Language, HTML,
-        문화어: 초본문표식달기언어, 하이퍼본문표식달기언어) </a
-      >는 웹 페이지 표시를 위해 개발된 지배적인 마크업 언어다. 또한, HTML은
-      제목, 단락, 목록 등과 같은 본문을 위한 구조적 의미를 나타내는 것뿐만
-      아니라 링크, 인용과 그 밖의 항목으로 구조적 문서를 만들 수 있는 방법을
-      제공한다. 그안의 꺾쇠 괄호에 둘러싸인 "태그"로 되어있는 HTML 요소 형태로
-      작성한다. HTML은 웹 브라우저와 같은 HTML 처리 장치의 행동에 영향을 주는
-      자바스크립트, 본문과 그 밖의 항목의 외관과 배치를 정의하는 CSS 같은
-      스크립트를 포함하거나 불러올 수 있다. HTML과 CSS 표준의 공동 책임자인
-      W3C는 명확하고 표상적인 마크업을 위하여 CSS의 사용을 권장한다.[1]
-    </p>
-    <img src="./coding.jpg" />
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+      </ol>
+      <div id="article">
+        <h2>HTML이란 무엇인가?</h2>
+        h1> <strong>(Hypertext Markup Language)</strong>은 <u>web</u>> 페이지와
+        <p>그 내용을 구조화하기 위해 <br />사용하는 코드</p>
+        <p style="margin-top: 45px">
+          <a
+            href="https://www.w3.org/TR/2011/WD-html5-20110405/"
+            target="_blank"
+            title="html5 specification"
+          >
+            하이퍼 텍스트 마크업 언어(영어: Hyper Text Markup Language, HTML,
+            문화어: 초본문표식달기언어, 하이퍼본문표식달기언어) </a
+          >는 웹 페이지 표시를 위해 개발된 지배적인 마크업 언어다. 또한, HTML은
+          제목, 단락, 목록 등과 같은 본문을 위한 구조적 의미를 나타내는 것뿐만
+          아니라 링크, 인용과 그 밖의 항목으로 구조적 문서를 만들 수 있는 방법을
+          제공한다. 그안의 꺾쇠 괄호에 둘러싸인 "태그"로 되어있는 HTML 요소
+          형태로 작성한다. HTML은 웹 브라우저와 같은 HTML 처리 장치의 행동에
+          영향을 주는 자바스크립트, 본문과 그 밖의 항목의 외관과 배치를 정의하는
+          CSS 같은 스크립트를 포함하거나 불러올 수 있다. HTML과 CSS 표준의 공동
+          책임자인 W3C는 명확하고 표상적인 마크업을 위하여 CSS의 사용을
+          권장한다.[1]
+        </p>
+        <img src="./coding.jpg" />
+      </div>
+    </div>
   </body>
 </html>
