--- a/3.html
+++ b/3.html
@@ -3,29 +3,34 @@
   <head>
     <title>WEB1 - JavaScript</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <h1><a href="index.html">WEB</a></h1>
-    <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
-    </ol>
-    <h2>JavaScript</h2>
-    <p style="margin-top: 45px">
-      JavaScript , often abbreviated as JS, is a programming language that is
-      one of the core technologies of the World Wide Web, alongside HTML and
-      CSS. As of 2022, 98% of websites use JavaScript on the client side for
-      webpage behavior, often incorporating third-party libraries. All major web
-      browsers have a dedicated JavaScript engine to execute the code on users'
-      devices. JavaScript is a high-level, often just-in-time compiled language
-      that conforms to the ECMAScript standard.[10] It has dynamic typing,
-      prototype-based object-orientation, and first-class functions. It is
-      multi-paradigm, supporting event-driven, functional, and imperative
-      programming styles. It has application programming interfaces (APIs) for
-      working with text, dates, regular expressions, standard data structures,
-      and the Document Object Model (DOM).
-    </p>
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+      </ol>
+      <div id="article">
+        <h2>JavaScript</h2>
+        <p style="margin-top: 45px">
+          JavaScript , often abbreviated as JS, is a programming language that
+          is one of the core technologies of the World Wide Web, alongside HTML
+          and CSS. As of 2022, 98% of websites use JavaScript on the client side
+          for webpage behavior, often incorporating third-party libraries. All
+          major web browsers have a dedicated JavaScript engine to execute the
+          code on users' devices. JavaScript is a high-level, often just-in-time
+          compiled language that conforms to the ECMAScript standard.[10] It has
+          dynamic typing, prototype-based object-orientation, and first-class
+          functions. It is multi-paradigm, supporting event-driven, functional,
+          and imperative programming styles. It has application programming
+          interfaces (APIs) for working with text, dates, regular expressions,
+          standard data structures, and the Document Object Model (DOM).
+        </p>
+      </div>
+    </div>
   </body>
 </html>
