--- a/index.html
+++ b/index.html
@@ -3,25 +3,30 @@
   <head>
     <title>WEB1 - welcome</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <h1><a href="index.html">WEB</a></h1>
-    <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
-    </ol>
-    <h2>WEB2</h2>
-    <p style="margin-top: 45px">
-      This page gives some rough guidelines which most Wikipedia editors use to
-      decide if a form of web-specific content, being either the content of a
-      website or the specific website itself, should have an article on
-      Wikipedia. Web content includes, but is not limited to, blogs, Internet
-      forums, newsgroups, online magazines, other media, podcasts, webcomics,
-      and web portals. Any content accessed via the internet and engaged with
-      primarily through a web browser is considered web content for the purposes
-      of this guideline.[1]
-    </p>
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+      </ol>
+      <div id="article">
+        <h2>WEB</h2>
+        <p style="margin-top: 45px">
+          This page gives some rough guidelines which most Wikipedia editors use
+          to decide if a form of web-specific content, being either the content
+          of a website or the specific website itself, should have an article on
+          Wikipedia. Web content includes, but is not limited to, blogs,
+          Internet forums, newsgroups, online magazines, other media, podcasts,
+          webcomics, and web portals. Any content accessed via the internet and
+          engaged with primarily through a web browser is considered web content
+          for the purposes of this guideline.[1]
+        </p>
+      </div>
+    </div>
   </body>
 </html>
